[package]
name = "place-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
actix-web = "4.0.1"
actix-ws = "0.2.5"
image = "0.24.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
